# rustafarian-controller

./: Cargo.toml  README.md  config.toml  log.txt
.github/workflows/: merge.yml
resources/files/: 0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  0040.txt  (+60 more)
src/: config_parser.rs  drone_functions.rs  lib.rs  runnable.rs  server.rs  simulation_controller.rs
src/tests/: README.md  chat_test.rs  client_chat_server_interaction.rs  client_communication.rs  client_content_server_interaction.rs  client_server_communication.rs  content_test.rs  drone_communication.rs  drone_interaction.rs  setup.rs  topology.rs  utils.rs
src/tests/configurations/: invalid_client_config.toml  invalid_client_inexistent_connection.toml  invalid_client_no_reciprocal.toml  invalid_client_to_client.toml  invalid_client_to_server.toml  invalid_client_too_few_conn.toml  invalid_client_too_many_conn.toml  invalid_drone_config.toml  invalid_drone_no_reciprocal.toml  invalid_isolated_drone.toml  invalid_server_config.toml  invalid_server_no_reciprocal.toml  invalid_server_to_client.toml  invalid_server_to_server.toml  invalid_server_too_few_conn.toml  known_servers_test.toml  simple_config_for_chat_tests.toml  simple_config_for_content_tests.toml  test_complex_config.toml  test_config.toml  topology_1.toml  topology_10_nodes.toml  topology_2.toml  topology_20_drones.toml
tests/: client_communication.rs
